intro/1_pod_repl_serv/pod-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-nginx
  namespace: app-nginx-namespace
  labels:
    app: app-nginx
spec:
  containers:
    - name: app-nginx
      image: nginx:stable-alpine
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: 80
