intro/1_pod_repl_serv/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-nginx-service
  namespace: app-nginx-namespace
  labels:
    app: app-nginx
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP

  selector:
    app: app-nginx
